syntax = "proto3";

package api;

message User {
  int32 ID = 1;
  string Email = 2;
  string Token = 3;
  int64 LastLogin = 4;
  bool IsDisabled = 5;
}

